src/test/deca/syntax/valid/include_lex_0.deca
// Description:
//    Programme minimaliste include.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023
#include "fichier.h"
