src/test/deca/syntax/invalid/include_lex_1.deca
// Description:
//    tests de programme incorrect lexicalement (FILENAME vide)
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 03/01/2023
include ""